[package]
name = "midi-buttons-to-mmc"
version = "0.1.0"
authors = ["luna <luna@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir     = "0.5.0"
ghakuf    = { git = "https://github.com/selenologist/ghakuf" } # use our patched fork
